# magic-link

./: .gitignore  Cargo.toml
migrations/: 20240127031103_create_users_table.up.sql
src/: api.rs  db.rs  email.rs  env.rs  jwt.rs  lib.rs  main.rs  state.rs  user_mailing.rs
src/domains/: auth.rs  mod.rs
