[package]
name = "magic-link"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1" , features = ["macros", "rt-multi-thread"] }
axum = "0.7.4"
serde = { version = "1.0.195", features = ["derive"] }
aws-sdk-ses = { version = "1.12.0", features = ["rustls"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite", "macros", "time"] }
jwt = "0.16.0"
hmac = "0.12.1"
chrono = "0.4.33"
sha2 = "0.10.8"
trait-variant = "0.1.1"
